<resources>
    <string name="app_name">DianDian</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_password2">确认密码</string>
    <string name="phone">电话号码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown">保密</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="birthday_title">请选择你的生日</string>
</resources>
